NULL=

iconsize=16x16
category=devices
icondir = $(datadir)/icons/gnome/$(iconsize)/$(category)

icon_DATA =\
   gnome-dev-cdrom-audio.png \
   gnome-dev-cdrom.png \
   gnome-dev-dvd.png \
   gnome-dev-ethernet.png \
   gnome-dev-floppy.png \
   gnome-dev-harddisk.png \
   gnome-dev-ipod.png \
   gnome-dev-memory.png \
   gnome-dev-mouse-ball.png \
   gnome-dev-pci.png \
   gnome-dev-printer.png \
   gnome-dev-removable.png \
   gnome-dev-wavelan.png \
   gnome-dev-wavelan-encrypted.png \
	$(NULL)

EXTRA_DIST = $(icon_DATA)
