NULL=

iconsize=16x16
category=filesystems
icondir = $(datadir)/icons/gnome/$(iconsize)/$(category)

icon_DATA =\
	gnome-fs-bookmark.png \
	gnome-fs-bookmark-missing.png \
	gnome-fs-client.png \
	gnome-fs-desktop.png \
#	gnome-fs-local-shared-folder.png \
	gnome-fs-network.png \
	gnome-fs-server.png \
	gnome-fs-share.png \
	gnome-fs-trash-empty.png \
	gnome-fs-trash-full.png \
	$(NULL)

EXTRA_DIST = $(icon_DATA)
