NULL=

iconsize=16x16
category=filesystems
icondir = $(datadir)/icons/gnome/$(iconsize)/$(category)

icon_DATA =\
	gnome-fs-bookmark.png \
	gnome-fs-bookmark-missing.png \
	gnome-fs-client.png \
	gnome-fs-directory.png \
	gnome-fs-directory-accept.png \
	gnome-fs-desktop.png \
	gnome-fs-ftp.png \
	gnome-fs-home.png \
	gnome-fs-network.png \
	gnome-fs-nfs.png \
	gnome-fs-server.png \
	gnome-fs-share.png \
	gnome-fs-smb.png \
	gnome-fs-ssh.png \
	gnome-fs-trash-empty.png \
	gnome-fs-trash-full.png \
	$(NULL)

EXTRA_DIST = $(icon_DATA)
