NULL=

iconsize=16x16
category=mimetypes
icondir = $(datadir)/icons/gnome/$(iconsize)/$(category)

icon_DATA =\
   gnome-mime-application-msword.png \
   gnome-mime-application-vnd.ms-excel.png \
   gnome-mime-application-vnd.ms-powerpoint.png \
   gnome-mime-image-bmp.png \
   gnome-mime-image-gif.png \
   gnome-mime-image-jpeg.png \
   gnome-mime-image-png.png \
   gnome-mime-image-svg.png \
   gnome-mime-image-tiff.png \
   gnome-mime-image-wmf.png \
   gnome-mime-x-directory-nfs-server.png \
   gnome-mime-x-directory-smb-workgroup.png \
	$(NULL)

EXTRA_DIST = $(icon_DATA)
