NULL=

iconsize=16x16
category=mimetypes
icondir = $(datadir)/icons/gnome/$(iconsize)/$(category)

icon_DATA =\
	gnome-library.png \
	gnome-mime-application-magicpoint.png \
  gnome-mime-application-msword.png \
	gnome-mime-application-ogg.png \
	gnome-mime-application-par.png \
	gnome-mime-application-pgp-encrypted.png \
	gnome-mime-application-pgp-keys.png \
	gnome-mime-application-pgp.png \
	gnome-mime-application-postscript.png \
	gnome-mime-application-qif.png \
	gnome-mime-application-rhythmbox-effect.png \
	gnome-mime-application-rhythmbox-playlist.png \
	gnome-mime-application-rtf.png \
	gnome-mime-application-smil.png \
	gnome-mime-application-vnd.lotus-1-2-3.png \
  gnome-mime-application-vnd.ms-excel.png \
  gnome-mime-application-vnd.ms-powerpoint.png \
	gnome-mime-application-vnd.stardivision.calc.png \
	gnome-mime-application-vnd.stardivision.impress.png \
	gnome-mime-application-vnd.stardivision.writer.png \
	gnome-mime-application-vnd.sun.xml.calc.png \
	gnome-mime-application-vnd.sun.xml.draw.png \
	gnome-mime-application-vnd.sun.xml.impress.png \
	gnome-mime-application-vnd.sun.xml.writer.png \
	gnome-mime-application-vnd.sun.xml.writer.template.png \
	gnome-mime-application-wordperfect.png \
	gnome-mime-application-x-abiword.png \
	gnome-mime-application-x-applix-spreadsheet.png \
	gnome-mime-application-x-applix-word.png \
	gnome-mime-application-x-archive.png \
	gnome-mime-application-x-arj.png \
	gnome-mime-application-x-bittorrent.png \
	gnome-mime-application-x-bla.png \
	gnome-mime-application-x-blender.png \
	gnome-mime-application-x-blf.png \
	gnome-mime-application-x-blv.png \
	gnome-mime-application-x-bzip-compressed-tar.png \
	gnome-mime-application-x-bzip.png \
	gnome-mime-application-x-cd-image.png \
	gnome-mime-application-x-class-file.png \
	gnome-mime-application-x-compress.png \
	gnome-mime-application-x-compressed-tar.png \
	gnome-mime-application-x-core.png \
	gnome-mime-application-x-cpio-compressed.png \
	gnome-mime-application-x-cpio.png \
	gnome-mime-application-x-dc-rom.png \
	gnome-mime-application-x-deb.png \
	gnome-mime-application-x-desktop.png \
	gnome-mime-application-x-dia-diagram.png \
	gnome-mime-application-x-dv.png \
	gnome-mime-application-x-dvi.png \
	gnome-mime-application-x-e-theme.png \
	gnome-mime-application-x-executable.png \
	gnome-mime-application-x-extension-nfo.png \
	gnome-mime-application-x-extension-par2.png \
	gnome-mime-application-x-font-afm.png \
	gnome-mime-application-x-font-bdf.png \
	gnome-mime-application-x-font-linux-psf.png \
	gnome-mime-application-x-font-pcf.png \
	gnome-mime-application-x-font-sunos-news.png \
	gnome-mime-application-x-font-ttf.png \
	gnome-mime-application-x-gameboy-rom.png \
	gnome-mime-application-x-genesis-rom.png \
	gnome-mime-application-x-glade.png \
	gnome-mime-application-x-gnucash.png \
	gnome-mime-application-x-gnumeric.png \
	gnome-mime-application-x-gtktalog.png \
	gnome-mime-application-x-gzip.png \
	gnome-mime-application-x-ipod-firmware.png \
	gnome-mime-application-x-jar.png \
	gnome-mime-application-x-kde-app-info.png \
	gnome-mime-application-x-killustrator.png \
	gnome-mime-application-x-kpresenter.png \
	gnome-mime-application-x-kspread.png \
	gnome-mime-application-x-kword.png \
	gnome-mime-application-x-lha.png \
	gnome-mime-application-x-lhz.png \
	gnome-mime-application-x-mrproject.png \
	gnome-mime-application-x-msx-rom.png \
	gnome-mime-application-x-n64-rom.png \
	gnome-mime-application-x-nes-rom.png \
	gnome-mime-application-x-object.png \
	gnome-mime-application-x-perl.png \
	gnome-mime-application-x-php.png \
	gnome-mime-application-x-python-bytecode.png \
	gnome-mime-application-x-python.png \
	gnome-mime-application-x-qw.png \
	gnome-mime-application-x-rar.png \
	gnome-mime-application-x-reject.png \
	gnome-mime-application-x-rpm.png \
	gnome-mime-application-x-ruby.png \
	gnome-mime-application-x-sharedlib.png \
	gnome-mime-application-x-shellscript.png \
	gnome-mime-application-x-shockwave-flash.png \
	gnome-mime-application-x-sms-rom.png \
	gnome-mime-application-x-sql.png \
	gnome-mime-application-x-stuffit.png \
	gnome-mime-application-x-tar.png \
	gnome-mime-application-x-tex.png \
	gnome-mime-application-x-trash.png \
	gnome-mime-application-x-x509-ca-cert.png \
	gnome-mime-application-zip.png \
	gnome-mime-application.png \
	gnome-mime-audio-ac3.png \
	gnome-mime-audio-basic.png \
	gnome-mime-audio-midi.png \
	gnome-mime-audio-x-aiff.png \
	gnome-mime-audio-x-it.png \
	gnome-mime-audio-x-midi.png \
	gnome-mime-audio-x-mod.png \
	gnome-mime-audio-x-mp3.png \
	gnome-mime-audio-x-s3m.png \
	gnome-mime-audio-x-stm.png \
	gnome-mime-audio-x-ulaw.png \
	gnome-mime-audio-x-voc.png \
	gnome-mime-audio-x-wav.png \
	gnome-mime-audio-x-xi.png \
	gnome-mime-audio-x-xm.png \
	gnome-mime-audio.png \
  gnome-mime-image.png \
  gnome-mime-image-bmp.png \
  gnome-mime-image-gif.png \
  gnome-mime-image-jpeg.png \
  gnome-mime-image-png.png \
  gnome-mime-image-svg.png \
	gnome-mime-image-svg+xml.png \
  gnome-mime-image-tiff.png \
  gnome-mime-image-wmf.png \
	gnome-mime-image-x-3ds.png \
	gnome-mime-image-x-applix-graphic.png \
	gnome-mime-image-x-cmu-raster.png \
	gnome-mime-image-x-lwo.png \
	gnome-mime-image-x-lws.png \
	gnome-mime-image-x-xcf.png \
	gnome-mime-text-css.png \
	gnome-mime-text-html.png \
	gnome-mime-text-plain.png \
	gnome-mime-text-plaintext.png \
	gnome-mime-text-x-authors.png \
	gnome-mime-text-x-c++src.png \
	gnome-mime-text-x-c-header.png \
	gnome-mime-text-x-c.png \
	gnome-mime-text-x-chdr.png \
	gnome-mime-text-x-copying.png \
	gnome-mime-text-x-credits.png \
	gnome-mime-text-x-csh.png \
	gnome-mime-text-x-csharp.png \
	gnome-mime-text-x-csrc.png \
	gnome-mime-text-x-haskell.png \
	gnome-mime-text-x-install.png \
	gnome-mime-text-x-java.png \
	gnome-mime-text-x-literate-haskell.png \
	gnome-mime-text-x-lyx.png \
	gnome-mime-text-x-makefile.png \
	gnome-mime-text-x-objcsrc.png \
	gnome-mime-text-x-patch.png \
	gnome-mime-text-x-readme.png \
	gnome-mime-text-x-scheme.png \
	gnome-mime-text-x-sql.png \
	gnome-mime-text-x-tex.png \
	gnome-mime-text-x-troff-man.png \
	gnome-mime-text-x-txt.png \
	gnome-mime-text-x-vcalendar.png \
	gnome-mime-text-x-vcard.png \
	gnome-mime-text-x-zsh.png \
	gnome-mime-text-xml.png \
	gnome-mime-text.png \
	gnome-mime-video-mpeg.png \
	gnome-mime-video-quicktime.png \
	gnome-mime-video-x-ms-asf.png \
	gnome-mime-video-x-ms-wmv.png \
	gnome-mime-video-x-msvideo.png \
	gnome-mime-video.png \
  gnome-mime-x-directory-nfs-server.png \
  gnome-mime-x-directory-smb-workgroup.png \
	gnome-mime-x-directory-smb-server.png \
	gnome-mime-x-directory-smb-share.png \
	gnome-mime-x-font-afm.png \
	gnome-package.png \
	$(NULL)

EXTRA_DIST = $(icon_DATA)
