NULL=

iconsize=24x24
category=apps
icondir = $(datadir)/icons/hicolor/$(iconsize)/$(category)

icon_DATA =\
   advanced-directory.png \
   applets-screenshooter.png \
   blender.png \
   config-language.png \
   gnome-amusements.png \
   gnome-devel.png \
   gnome-favorites.png \
   gnome-globe.png \
   gnome-graphics.png \
   gnome-help.png \
   gnome-joystick.png \
   gnome-lockscreen.png \
   gnome-logout.png \
   gnome-multimedia.png \
   gnome-run.png \
   gnome-searchtool.png \
   gnome-settings.png \
   gnome-status.png \
   gnome-terminal.png \
	 gnome-window-manager.png \
   panel-notification-area.png \
   panel-window-list.png \
   panel-window-menu.png \
	$(NULL)

EXTRA_DIST = $(icon_DATA)
