NULL=

iconsize=24x24
category=devices
icondir = $(datadir)/icons/gnome/$(iconsize)/$(category)

icon_DATA =\
   gnome-dev-battery.png   \
   gnome-dev-cdrom-audio.png  \
   gnome-dev-cdrom.png  \
   gnome-dev-disc-cdr.png \
   gnome-dev-disc-cdrw.png \
   gnome-dev-disc-dvdr.png \
   gnome-dev-disc-dvdr-plus.png \
   gnome-dev-disc-dvdram.png \
   gnome-dev-disc-dvdrom.png \
   gnome-dev-disc-dvdrw.png \
   gnome-dev-dvd.png  \
   gnome-dev-ethernet.png \
   gnome-dev-floppy.png  \
   gnome-dev-harddisk.png  \
   gnome-dev-harddisk-usb.png  \
   gnome-dev-harddisk-1394.png  \
   gnome-dev-ipod.png  \
   gnome-dev-media-cf.png \
   gnome-dev-media-ms.png \
   gnome-dev-media-sdmmc.png \
   gnome-dev-media-sm.png \
   gnome-dev-memory.png  \
   gnome-dev-mouse-ball.png  \
   gnome-dev-pci.png \
   gnome-dev-printer.png  \
   gnome-dev-removable.png  \
   gnome-dev-removable-usb.png  \
   gnome-dev-removable-1394.png  \
   gnome-dev-wavelan.png \
   gnome-dev-wavelan-encrypted.png \
	$(NULL)

EXTRA_DIST = $(icon_DATA)
