NULL=

iconsize=24x24
category=filesystems
icondir = $(datadir)/icons/gnome/$(iconsize)/$(category)

icon_DATA =\
	gnome-fs-bookmark-missing.png \
	gnome-fs-bookmark.png \
	gnome-fs-directory-accept.icon \
	gnome-fs-directory-accept.png \
	gnome-fs-directory.icon \
	gnome-fs-directory.png \
   gnome-fs-server.png \
	$(NULL)

EXTRA_DIST = $(icon_DATA)
